# NePaliCode

./: CMakeLists.txt  InformaticheskiyPizdez.cpp  InformaticsOperatorA.cpp  InformaticsOperatorB.cpp  InformaticsOperatorC.cpp  main.cpp  minOstovV1.cpp  minOstovV3.cpp
