cmake_minimum_required(VERSION 3.17)
project(YaKto)

set(CMAKE_CXX_STANDARD 14)

add_executable(InformaticheskiyPizdez InformaticheskiyPizdez.cpp)
add_executable(minOstovV1 minOstovV1.cpp)
add_executable(minOstovV3 minOstovV3.cpp)
add_executable(InformaticsOperatorA InformaticsOperatorA.cpp)
add_executable(InformaticsOperatorB InformaticsOperatorB.cpp)
add_executable(InformaticsOperatorC InformaticsOperatorC.cpp)